add missing dependency

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "serve": "^6.5.0",
     "todomvc-app-css": "^2.1.0",
     "todomvc-common": "^1.0.4"
   },
